<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <RelativeLayout
            android:id="@+id/question_1_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_1"
                android:layout_alignParentLeft="true"
                style="@style/quiz_question"
                android:text="@string/question_1" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/options_question_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/qn_1_option_1_txt_1"
                style="@style/qn_radio_btn"
                android:text="@string/qn_1_option_1_txt_1" />

            <RadioButton
                android:id="@+id/qn_1_option_2_txt_2"
                style="@style/qn_radio_btn"
                android:text="@string/qn_1_option_2_txt_2" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/question_2_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_2"
                android:layout_alignParentLeft="true"
                style="@style/quiz_question"
                android:text="@string/question_2" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/qn_2_option_1_txt_1"
            style="@style/qn_radio_btn"
            android:text="@string/qn_2_option_1_txt_1" />

        <CheckBox
            android:id="@+id/qn_2_option_2_txt_2"
            style="@style/qn_radio_btn"
            android:text="@string/qn_2_option_2_txt_2" />

        <CheckBox
            android:id="@+id/qn_2_option_3_txt_3"
            style="@style/qn_radio_btn"
            android:text="@string/qn_2_option_3_txt_3" />

        <CheckBox
            android:id="@+id/qn_2_option_4_txt_4"
            style="@style/qn_radio_btn"
            android:text="@string/qn_2_option_4_txt_4" />

        <RelativeLayout
            android:id="@+id/question_3_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_3"
                style="@style/quiz_question"
                android:layout_alignParentLeft="true"
                android:text="@string/question_3" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/options_question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/qn_3_option_1_txt_1"
                style="@style/qn_radio_btn"
                android:text="@string/qn_3_option_1_txt_1" />

            <RadioButton
                android:id="@+id/qn_3_option_2_txt_2"
                style="@style/qn_radio_btn"
                android:text="@string/qn_3_option_2_txt_2" />

            <RadioButton
                android:id="@+id/qn_3_option_3_txt_3"
                style="@style/qn_radio_btn"
                android:text="@string/qn_3_option_3_txt_3" />

            <RadioButton
                android:id="@+id/qn_3_option_4_txt_4"
                style="@style/qn_radio_btn"
                android:text="@string/qn_3_option_4_txt_4" />
        </RadioGroup>


        <RelativeLayout
            android:id="@+id/question_4_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_4"
                style="@style/quiz_question"
                android:layout_alignParentLeft="true"
                android:text="@string/question_4" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/qn_4_option_1_txt_1"
            style="@style/qn_checkbox_btn"
            android:text="@string/qn_4_option_1_txt_1" />

        <CheckBox
            android:id="@+id/qn_4_option_2_txt_2"
            style="@style/qn_checkbox_btn"
            android:text="@string/qn_4_option_2_txt_2" />

        <CheckBox
            android:id="@+id/qn_4_option_3_txt_3"
            style="@style/qn_checkbox_btn"
            android:text="@string/qn_4_option_3_txt_3" />

        <CheckBox
            android:id="@+id/qn_4_option_4_txt_4"
            style="@style/qn_checkbox_btn"
            android:text="@string/qn_4_option_4_txt_4" />

        <CheckBox
            android:id="@+id/qn_4_option_5_txt_5"
            style="@style/qn_checkbox_btn"
            android:text="@string/qn_4_option_5_txt_5" />

        <RelativeLayout
            android:id="@+id/question_5_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_5"
                style="@style/quiz_question"
                android:text="@string/question_5" />
        </RelativeLayout>

        <EditText
            android:id="@+id/qn_5_option_1_txt_1"
            style="@style/qn_edittext_btn"
            android:hint="@string/qn_5_option_1_txt_1" />

        <RelativeLayout
            android:id="@+id/question_6_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_6"
                style="@style/quiz_question"
                android:layout_alignParentLeft="true"
                android:text="@string/question_6" />
        </RelativeLayout>

        <EditText
            android:id="@+id/qn_6_option_1_txt_1"
            style="@style/qn_edittext_btn"
            android:hint="@string/qn_6_option_1_txt_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                style="@style/qz_submit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:background="@color/colorBlueSuccess"
                android:onClick="evaluateQuiz"
                android:text="@string/submit_quiz_btn" />

            <Space
                android:layout_width="1dp"
                android:layout_height="35dp" />

            <Button
                style="@style/qz_submit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:onClick="loadWelcomeActivity"
                android:text="@string/restart_quiz_btn" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>